[package]
name = "hq"
description = "Like jq, but for HTML."
categories = ["command-line-utilities"]
keywords = ["CSS", "HTML", "query"]
repository = "https://github.com/MultisampledNight/hq"
readme = "README.md"
license = "MIT"
version = "0.4.0"
authors = ["Michael Maclean <michael@mgdm.net>", "MultisampledNight"]
edition = "2024"

[dependencies]
kuchiki = "0.8.1"
html5ever = "0.25.1"
clap = "2.33.3"
lazy_static = "1.4.0"
url = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
